Bundling and minification

--- a/eShop.AdminApp/Views/Category/Index.cshtml
+++ b/eShop.AdminApp/Views/Category/Index.cshtml
@@ -12,7 +12,7 @@
             $('#msgAlert').fadeOut('slow');
         }, 2000);
     </script>
-    <script src="~/js/controller/category/pagingCategoryController.js"></script>
+    <script src="~/js/controller/category/pagingCategoryController.min.js"></script>
 }
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
