--- a/eShop.AdminApp/Views/Order/Index.cshtml
+++ b/eShop.AdminApp/Views/Order/Index.cshtml
@@ -7,7 +7,7 @@
 }
 @section Scripts{
 
-    <script src="~/js/controller/order/pagingOrderController.js"></script>
+    <script src="~/js/controller/order/pagingOrderController.min.js"></script>
 
 }
 <div class="content-wrapper">
