--- a/eShop.AdminApp/Views/Product/Edit.cshtml
+++ b/eShop.AdminApp/Views/Product/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section Scripts{
-    <script src="https://cdn.ckeditor.com/ckeditor5/27.1.0/classic/ckeditor.js"></script>
+    <script src="~/libs/ckeditor/ckeditor.js"></script>
     @*<script>
             $('#txt_details').ckeditor();
         </script>*@
