--- a/eShop.AdminApp/Views/Product/Index.cshtml
+++ b/eShop.AdminApp/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
         }, 2000);
     </script>
 
-    <script src="~/js/controller/product/pagingProductController.js"></script>
+    <script src="~/js/controller/product/pagingProductController.min.js"></script>
 }
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
