--- a/eShop.AdminApp/Views/User/EnableAuthenticator.cshtml
+++ b/eShop.AdminApp/Views/User/EnableAuthenticator.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section Scripts {
-    <script src="~/js/qrCode/qrcode.js"></script>
+    <script src="~/js/qrCode/qrcode.min.js"></script>
     <script>
         @*new QRCode(document.getElementById("qrCode"),
             {
