--- a/eShop.AdminApp/Views/User/Index.cshtml
+++ b/eShop.AdminApp/Views/User/Index.cshtml
@@ -21,7 +21,7 @@
         var site = new UserController();
         site.initialize();
     </script>
-    <link rel="stylesheet" href="/css/TichXanh.css">
+    <link href="~/css/TichXanh.min.css" rel="stylesheet" />
 
 }
 <div class="content-wrapper">
