--- a/eShop.WebApp/Views/Cart/Checkout.cshtml
+++ b/eShop.WebApp/Views/Cart/Checkout.cshtml
@@ -8,12 +8,12 @@
 
 @section scripts{
 
-    <script src="/js/HiddenSibar.js"></script>
+    <script src="~/js/HiddenSibar.min.js"></script>
     <script>
         var hidden = new Hidden();
         hidden.initialize();
     </script>
-    <script src="/js/cart.js"></script>
+    <script src="~/js/cart.min.js"></script>
 
     <script>
         var cartController = new CartController();
