--- a/eShop.WebApp/Views/Contact/Create.cshtml
+++ b/eShop.WebApp/Views/Contact/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 @section scripts{
-    <script src="/js/HiddenSibar.js"></script>
+    <script src="~/js/HiddenSibar.min.js"></script>
     <script>
         var hidden = new Hidden();
         hidden.initialize();
@@ -13,7 +13,7 @@
 
 <div id="contact-page" class="container">
     <div class="bg">
-        <div class="row">          
+        <div class="row">
         </div>
         <div class="row">
             <div class="col-sm-8">
