--- a/eShop.WebApp/Views/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Views/Shared/_Layout.cshtml
@@ -14,13 +14,13 @@
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/prettyPhoto.css" rel="stylesheet">
-    <link href="/css/price-range.css" rel="stylesheet">
-    <link href="/css/animate.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/responsive.css" rel="stylesheet">
+    <link href="~/css/prettyPhoto.min.css" rel="stylesheet" />
+    <link href="~/css/price-range.min.css" rel="stylesheet" />
+    <link href="~/css/animate.min.css" rel="stylesheet" />
+    <link href="~/css/main.min.css" rel="stylesheet" />
+    <link href="~/css/responsive.min.css" rel="stylesheet" />
 
-    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
@@ -380,12 +380,12 @@
     </footer><!--/Footer-->
 
     <script src="/js/jquery.scrollUp.min.js" type="text/javascript"></script>
-    <script src="/js/price-range.js"></script>
+    <script src="~/js/price-range.min.js"></script>
     <script src="/js/jquery.prettyPhoto.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="~/js/main.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="/js/site.js"></script>
-    <script src="~/lib/Mustache/mustache.js"></script>
+    <script src="~/js/site.min.js"></script>
+    <script src="~/lib/Mustache/mustache.min.js"></script>
     <script>
         var site = new SiteController();
         site.initialize();
