--- a/eShop.AdminApp/Views/Login/LoginWith2Fa.cshtml
+++ b/eShop.AdminApp/Views/Login/LoginWith2Fa.cshtml
@@ -10,7 +10,7 @@
     <title>Two-Factor Authentication</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/authen2Facss.css">
+    <link href="~/css/authen2Facss.min.css" rel="stylesheet" />
 </head>
 <body>
     <!-- partial:index.partial.html -->
@@ -33,7 +33,7 @@
         {
             <div style="text-align:center">
 
-            <span style="color:red">@TempData["Error"]</span>
+                <span style="color:red">@TempData["Error"]</span>
             </div>
         }
     </div>
