--- a/eShop.AdminApp/Views/Login/ResetPassword.cshtml
+++ b/eShop.AdminApp/Views/Login/ResetPassword.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/css/ResetPassword.css">
+    <link href="~/css/ResetPassword.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 <input type="password" asp-for="@Model.ConfirmPassword" placeholder="Confirm Password">
                 <input type="email" asp-for="@Model.Email" placeholder="Email">
             </div>
-          
+
             <button type="submit">Submit</button>
         </form>
     </div>
