--- a/eShop.AdminApp/Views/Product/Create.cshtml
+++ b/eShop.AdminApp/Views/Product/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section Scripts{
-    <script src="https://cdn.ckeditor.com/ckeditor5/28.0.0/classic/ckeditor.js"></script>
+    <script src="~/libs/ckeditor/ckeditor.js"></script>
     @*<script>
             $('#txt_details').ckeditor();
         </script>*@
