--- a/eShop.WebApp/Views/Account/ResetPassword.cshtml
+++ b/eShop.WebApp/Views/Account/ResetPassword.cshtml
@@ -11,7 +11,7 @@
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
-    <link href="~/css/ResetPassword.css" rel="stylesheet" />
+    <link href="~/css/ResetPassword.min.css" rel="stylesheet" />
 </head>
 
 <body>
