update login and _layout

--- a/eShop.AdminApp/Views/Login/Index.cshtml
+++ b/eShop.AdminApp/Views/Login/Index.cshtml
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="/libs/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="/libs/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
@@ -91,9 +91,9 @@
     </div>
     <!-- /.login-box -->
     <!-- jQuery -->
-    <script src="/libs/plugins/jquery/jquery.min.js"></script>
+    <script src="/libs/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="/libs/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="/js/adminlte.min.js"></script>
 </body>
