--- a/eShop.WebApp/Views/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Views/Shared/_Layout.cshtml
@@ -156,8 +156,18 @@
 
                                     <li><a href="/@culture/Account/Login"><i class="fa fa-lock"></i> Login</a></li>
                                 }
-                                <li><a href="/@culture/Cart/Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-                                <li><a href="/@culture/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                                <li>
+                                    <a href="/@culture/Cart/Checkout">
+                                        <i class="fa fa-crosshairs"></i> Checkout
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="/@culture/cart">
+                                        <i class="fa fa-shopping-cart"></i> Cart
+                                        <span class="badge badge-success"> 5 </span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
