--- a/eShop.AdminApp/Views/Login/VerifyEmail.cshtml
+++ b/eShop.AdminApp/Views/Login/VerifyEmail.cshtml
@@ -163,7 +163,7 @@
                                                             <input type="hidden" asp-for="@Model.Token" />
                                                         </div>
 
-                                                        <button type="submit" style="font-size: 20px; ">Submit</button>
+                                                        <button type="submit" style="font-size: 20px; background: none;border: none;margin-bottom: 10px; cursor:pointer">Submit</button>
                                                     </form>
                                                 </td>
                                             </tr>
