--- a/eShop.AdminApp/Views/Product/Details.cshtml
+++ b/eShop.AdminApp/Views/Product/Details.cshtml
@@ -122,7 +122,7 @@
                     </dt>
                     <dd class="col-sm-10">
                         <img src="@(Configuration["BaseAddress"]  +Model.ThumbnailImage)"
-                             class="rounded-circle" />
+                             class="rounded-circle" style="width: 300px;"  />
                     </dd>
                 </dl>
             </div>
