--- a/eShop.WebApp/Views/Product/Category.cshtml
+++ b/eShop.WebApp/Views/Product/Category.cshtml
@@ -42,7 +42,7 @@
                             <div class="overlay-content">
                                 <h2>$@item.Price</h2>
                                 <p>@item.Name</p>
-                                <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
+                                <a class="btn btn-default add-to-cart btn-add-cart" data-id="@item.Id" href="#"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                             </div>
                         </div>
                     </div>
